# warp

./: .gitignore  CMakeLists.txt  LICENSE  install.sh  warp.sh
conf/: protected  warp.conf
contrib/: fastfetch-warp.jsonc  neofetch-warp.sh
contrib/completions/: warp.fish  warp.zsh
docs/: README.md  WARPBUILD.example  commands.md  configuration.md  creating-packages.md  how-it-works.md  repository.md
lib/: build.sh  build_src.sh  config.sh  db.sh  diag.sh  format.sh  install.sh  remove.sh  repo.sh  tui.sh
man/: warp.1
src/: build.cpp  build.h  config.cpp  config.h  db.cpp  db.h  dep.cpp  dep.h  diag.cpp  diag.h  format.cpp  format.h  install.cpp  install.h  main.cpp  protect.cpp  protect.h  remove.cpp  remove.h  repo.cpp  repo.h  tui.cpp  tui.h
